hashicorp-http-echo/app-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-01
  namespace: app
  labels:
    app: app-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-01
  template:
    metadata:
      labels:
        app: app-01
    spec:
     containers:
        - name: app-01
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=hello world my name APP-01"
            - "-listen=:5678"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app-01-svc
  namespace: app
spec:
  selector:
    app: app-01
  ports: 
    - port: 80
      targetPort: 5678
